hidden logo twb on mobile and fixed z index decoration

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1237,7 +1237,7 @@ textarea {
     height: 250px;
     bottom: 0;
     left: 0;
-    z-index: 10;
+    z-index: 0;
     background: url(../images/decoration-mobile.png) no-repeat bottom left;
     background-size: 100%; } }
 .decoration {
@@ -1337,14 +1337,6 @@ textarea {
   .list--prize li {
     margin-bottom: 15px;
     line-height: 1; }
-
-.disabled > a {
-  color: #777 !important;
-  cursor: not-allowed;
-  background-color: #fff !important;
-  border-color: #ddd !important;
-  border: 1px solid #ddd !important;
-}
 
 footer {
   background-color: #1e419b;
